package Reserva;
public class Comprobante{
	private int idComprobante;
	private String tipo;
	private double monto;
}
