package Reserva;
enum EstadoReserva{
	EnEspera, Pagado, Cancelado, Completado
}
