package pe.edu.pucp.CanchaLibre.modelo.cancha;

public enum Deporte {
    FUTBOL,
    BASQUET,
    VOLEY,
    TENIS
}
